--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "F2B-angular2-webpack",
+  "name": "F2B-angular2-webpack",
   "version": "1.0.0",
   "description": "A webpack starter for angular 2",
   "scripts": {
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
+    "angular2-universal": "^0.104.5",
+    "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
+    "express": "^4.14.0",
+    "preboot": "^4.5.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
