--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "body-parser": "^1.15.2",
     "core-js": "^2.4.0",
     "express": "^4.14.0",
+    "html-loader": "^0.4.4",
+    "jasmine-core": "^2.5.2",
+    "karma-phantomjs-launcher": "^1.0.2",
     "preboot": "^4.5.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
